            - see https://thruk.org/documentation/rest.html for details
          - support clustered setups
            - see https://thruk.org/documentation/cluster.html for details
          - add api keys
          - add command_enabled option
          - show and use alias for hosts, hostgroups and servicegroups search
          - removed cookie_auth_direct_agents option
          - Business Process:
            - only show business processes where the contact is allowed to see the generated service (#810)
          - Panorama:
            - fix playing recovery or host alert sounds
          - Cookie Auth:
            - lock account after 10 failed login attempts
            - add `cookie_auth_disable_after_failed_logins` option
            - add lock/unlock actions to admin users page
          - Logcache:
            - fix issue with wrong contacts in notifications after authupdate command

2.22     Fri Jun 29 13:52:11 CEST 2018
          - cleanup preferences popup
          - add user profile page
          - add timezone setting to users profile page
          - add require_comments_for_disable_cmds option
          - move broadcast into side navigation
          - move important filters up (#792)
          - support macros in action menu onclicks
          - fix wrong number of backends (#809)
          - fix custom variable filters (#816)
          - deprecate shadownaemon
          - renamed cli livecache cmd to lmd
          - add option show_contacts to list contacts on extinfo page
          - add logcache fetchlogs option and add example scripts for ido
          - Broadcasts:
            - add template checkbox
            - add macro support
            - add frontmatter support
          - Panorama:
            - optionally show broadcasts in panorama dashboards
            - make determing worst state for group/filter icons configurable
            - add new configuration option 'default_state_order'